[package]
name = "d_print"
version = "0.1.0"
edition = "2021"
authors= ["amanshaw4511 <amanshaw4511@protonmail.com>"]
categories = ["cli"]
license = "MIT OR Apache-2.0"
description = "print any variable for debuging"
documentation = "https://docs.rs/d_print"
readme = "README.md"
homepage = "https://amansaw.com"
repository = "https://github.com/amanshaw4511/d_print"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
