[package]
name = "d_print"
version = "0.1.3"
edition = "2021"
authors= ["amanshaw4511 <amanshaw4511@protonmail.com>"]
description = "Print any struct in easy way"
categories = ["development-tools::debugging"]
keywords = ["debug", "print", "debug print", "print single struct"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/d_print"
readme = "README.md"
homepage = "https://amansaw.com"
repository = "https://github.com/amanshaw4511/d_print"



[dependencies]
